small update fixing padding on mobile

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -174,7 +174,11 @@ hr.small {
 /* About */
 
 .about {
-    padding: 50px 0;
+    padding: 25px 0;
+}
+
+.sm-padding {
+    padding-top: 25px;
 }
 
 /* Services */
